# rust-game-boilerplate

./: Cargo.toml  README.md
dev-client/: Cargo.toml
dev-client-lib/: Cargo.toml
dev-client-lib/src/: host_api.rs  lib.rs  macros.rs  state.rs
dev-client/src/: loop_context.rs  main.rs
shaders/: myshader_150.glslv
